[skins] Dark skin: fix selected account color hard to read when not active (fix #1042)

--- a/client/components/menu/banks.css
+++ b/client/components/menu/banks.css
@@ -190,6 +190,10 @@ body.dark main nav .bank-details > li > .accounts > li a:focus {
     color: #FFFFFF;
 }
 
+body.dark main nav .bank-details > li > .accounts > li a.active {
+    color: white;
+}
+
 body.dark main nav .bank-details > li > .accounts > li a.active:hover,
 body.dark main nav .bank-details > li > .accounts > li a.active:focus {
     background-color: #6792D8;
